--- a/geoportailv3/static/less/icons.less
+++ b/geoportailv3/static/less/icons.less
@@ -9,6 +9,17 @@
   font-style: normal;
 }
 
+@font-face {
+  font-family: "gisgr-icons";
+  src: url("../webfonts/Geoportail-Grande-Region.eot");
+  src: url("../webfonts/Geoportail-Grande-Region.eot?#iefix") format("embedded-opentype"),
+       url("../webfonts/Geoportail-Grande-Region.woff") format("woff"),
+       url("../webfonts/Geoportail-Grande-Region.ttf") format("truetype"),
+       url("../webfonts/Geoportail-Grande-Region.svg#Geoportail-Grande-Region") format("svg");
+  font-weight: normal;
+  font-style: normal;
+}
+
 @icon-width: 63px;
 
 button.icon {
@@ -21,7 +32,7 @@ button.icon,
 .infobar-button,
 li.icon > a {
   &:after {
-    font-family: "geoportail-icons" !important;
+    font-family: "gisgr-icons", "geoportail-icons" !important;
   }
 }
 .theme-icon {
