--- a/geoportailv3/static/less/layout.less
+++ b/geoportailv3/static/less/layout.less
@@ -146,7 +146,7 @@ app-map > div {
     text-align: center;
     text-indent: 0;
     border: 1px solid #8394a0;
-    font-family: "geoportail-icons" !important;
+    font-family: "gisgr-icons", "geoportail-icons" !important;
     margin: -1px;
   }
   &.infobar {
@@ -365,7 +365,7 @@ div.ol-zoom-extent > button {
   margin: 0px;
 }
 .navigation-account .tab:after {
-    font-family: "geoportail-icons";
+    font-family: "gisgr-icons", "geoportail-icons";
     font-size:28px;
     line-height:41px;
     color:#fff;
@@ -547,7 +547,7 @@ div.ol-zoom-extent > button {
   }
   a:after {
     bottom: 0px;
-    font-family: "geoportail-icons" !important;
+    font-family: "gisgr-icons", "geoportail-icons" !important;
     font-size: 2.5em;
     left: 10px;
     position: absolute;
