White background color for overview map

--- a/geoportailv3/static/less/layout.less
+++ b/geoportailv3/static/less/layout.less
@@ -239,6 +239,7 @@ app-map > div {
   left: initial;
   position: absolute;
   right: 0px;
+  background-color: white !important;
 }
 
 .ol-overviewmap {
@@ -247,6 +248,7 @@ app-map > div {
   padding: 0;
   right: 8px;
   border: 1px solid #8394a0;
+  background-color: white !important;
 }
 
 .location-button {
