--- a/geoportailv3/templates/index.html
+++ b/geoportailv3/templates/index.html
@@ -208,6 +208,7 @@
         </li>
       </ul>
       <ul class="footer-navigation nav navbar-nav pull-right hidden-xs">
+        <li><a href ng-click="mainCtrl.openFeedback()" translate>Feedback</a></li>
         <li ng-show="mainCtrl.lang === 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/fr/support/a-propos-du-site.html" translate>A Propos</a></li>
         <li ng-show="mainCtrl.lang !== 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/de/support/a-propos-du-site.html" translate>A Propos</a></li>
         <li><a target="_blank" ng-href="https://www.geoportail.lu/{{mainCtrl.lang}}/documentation/" translate>Aide</a></li>
