--- a/geoportailv3/static/less/layout.less
+++ b/geoportailv3/static/less/layout.less
@@ -244,11 +244,16 @@ app-map > div {
 
 .ol-overviewmap {
   left: initial;
-  bottom: 104px;
   padding: 0;
   right: 8px;
   border: 1px solid #8394a0;
   background-color: white !important;
+}
+.overviewmap-with-location {
+	bottom: 104px;
+}
+.overviewmap-wo-location {
+	bottom: 55px;
 }
 
 .location-button {
