--- a/geoportailv3/static/less/theme.less
+++ b/geoportailv3/static/less/theme.less
@@ -345,7 +345,7 @@ header.navbar-default {
 .theme(marche_du_travail, #006d2c, #99d8c9, #238b45, e908);
 .theme(culture_et_tourisme, #e84c3d, #e88c83, #a50f15, e90c);
 .theme(environnement, #879d31, #bacd81, #627529, e909);
-.theme(occupation_des_sols,  #ffa000, #ffd149, #c67100, e902);
+.theme(occupation_des_sols,  #ffa000, #ffd149, #c67100, e90f);
 .theme(transport,  #9e9e9e,#cfcfcf,#707070, e90d);
 .theme(demographie, #f4b72b, #f3d89b, #b3851d, e903);
 .theme(main, #2980b9, #97bbd3, #1f5d87, e02d);
