commit open changes for containerization

--- a/geoportailv3/static/less/theme.less
+++ b/geoportailv3/static/less/theme.less
@@ -341,14 +341,20 @@ header.navbar-default {
 // Then use the 3 darkest colors in the following order:
 // medium - light - dark
 
-.theme(amenagement, #f39c11, #ffc363, #9c6101, e902);
-.theme(marche_du_travail, #006d2c, #99d8c9, #238b45, e908);
+.theme(securite_et_prevention, #ef6c00, #ff9d3f, #b53d00, e90b);
+.theme(enseignement_superieur, #9c27b0, #d05ce3, #6a0080, e905);
+.theme(energie, #558b2f, #85bb5c, #255d00, e906);
+.theme(administration, #1976d2, #63a4ff, #004ba0, e900);
+.theme(agriculture,  #f39c11, #ffc363, #9c6101, e901);
+.theme(amenagement, #f4511e, #ff844c, #b91400, e902);
+.theme(marche_du_travail, #0097a7,#56c8d8 ,#006978 , e908);
 .theme(culture_et_tourisme, #e84c3d, #e88c83, #a50f15, e90c);
-.theme(environnement, #879d31, #bacd81, #627529, e909);
-.theme(occupation_des_sols,  #ffa000, #ffd149, #c67100, e90f);
-.theme(transport,  #9e9e9e,#cfcfcf,#707070, e90d);
+.theme(environnement,  #879d31, #bacd81, #627529, e909);
+.theme(occupation_des_sols,  #8d6e63, #bd9b8f, #5e4238, e90f);
+.theme(transport,  #1e88e5,#6ab7ff,#005cb2, e90d);
 .theme(demographie, #f4b72b, #f3d89b, #b3851d, e903);
 .theme(main, #2980b9, #97bbd3, #1f5d87, e02d);
+.theme(formation, #3f51b5, #757de8, #002984, e907);
 
 .theme(eau, #03a2ac, #45cdd6, #078f98, e016);
 .theme(intranet-at, #9e9ac8, #cbc9e2, #756bb1, e018);
