--- a/geoportailv3/static/less/navbars.less
+++ b/geoportailv3/static/less/navbars.less
@@ -16,7 +16,7 @@ header {
   .container-fluid {
     padding-left: 0;
     padding-right: 0;
-	background-image: url(/main/wsgi/proj/1/images/gisgr.png);
+	background-image: url(/proj/1/images/gisgr.png);
     background-repeat: no-repeat;
     background-position: left;
   }
