--- a/geoportal/geoportailv3_geoportal/static-ngeo/js/apps/main.html.ejs
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/js/apps/main.html.ejs
@@ -331,15 +331,15 @@
         </li>
       </ul>
       <ul class="footer-navigation nav navbar-nav pull-right hidden-xs">
-        <li ng-if="mainCtrl.showCruesLink"><a href ng-click="mainCtrl.openFeedbackCrues()" translate>Feedback Crues</a></li>
-        <li ng-if="::mainCtrl.showAnfLink"><a href ng-click="mainCtrl.openFeedbackAnf()" translate>Feedback ANF</a></li>
-        <li ng-if="::mainCtrl.showAgeLink"><a href ng-click="mainCtrl.openFeedbackAge()" translate>Feedback AGE</a></li>
-        <li><a href ng-click="mainCtrl.openFeedback()" translate>Feedback</a></li>
-        <li><a ng-href="https://www.geoportail.lu/{{mainCtrl.lang}}/propos/" target="_blank" translate>A Propos</a></li>
-        <li><a ng-href="https://www.geoportail.lu/{{mainCtrl.lang}}/documentation/" target="_blank" translate>Aide</a></li>
-        <li><a ng-href="https://www.geoportail.lu/{{mainCtrl.lang}}/propos/contactez-nous/" target="_blank" translate>Contact</a></li>
-        <li><a ng-href="https://www.geoportail.lu/{{mainCtrl.lang}}/propos/mentions-legales/" target="_blank" translate>Legalites</a></li>
-        <li><a ng-href="http://www.act.public.lu/" target="_blank">ACT</a></li>
+        <li ng-show="mainCtrl.lang === 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/fr/support/a-propos-du-site.html" translate>A Propos</a></li>
+        <li ng-show="mainCtrl.lang !== 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/de/support/a-propos-du-site.html" translate>A Propos</a></li>
+        <li><a target="_blank" ng-href="https://www.geoportail.lu/{{mainCtrl.lang}}/documentation/" translate>Aide</a></li>
+        <li ng-show="mainCtrl.lang === 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/fr/support/contact.html" translate>Contact</a></li>
+        <li ng-show="mainCtrl.lang !== 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/de/support/contact.html" translate>Contact</a></li>
+        <li ng-show="mainCtrl.lang === 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/fr/support/aspects-legaux.html" translate>Legalites</a></li>
+        <li ng-show="mainCtrl.lang !== 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/de/support/aspects-legaux.html" translate>Legalites</a></li>
+        <li ng-show="mainCtrl.lang === 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/fr.html">SIG-GR</a></li>
+        <li ng-show="mainCtrl.lang !== 'fr'"><a target="_blank" ng-href="http://www.sig-gr.eu/de.html">GIS-GR</a></li>
       </ul>
       <ul class="toolbox nav navbar-nav" ngeo-btn-group>
         <li class="draw icon hidden-3d" ng-class="mainCtrl.drawOpen ? 'active' : ''">
