--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/geoportailv3.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/geoportailv3.less
@@ -3,11 +3,9 @@
 @import "../../../node_modules/bootstrap/less/bootstrap.less";
 @import "../../../node_modules/font-awesome/less/font-awesome.less";
 
-@import "controls3d.less";
 @import "variables.less";
 @import "layout.less";
 @import "sidebar.less";
-@import "offline.less";
 @import "navbars.less";
 @import "icons.less";
 @import "catalog.less";
@@ -19,7 +17,6 @@
 @import "search.less";
 @import "mymaps.less";
 @import "featurepopup.less";
-@import "routing.less";
 
 
 @font-face {
@@ -30,13 +27,12 @@
        url('../webfonts/28867F_0_0.ttf') format('truetype');
 }
 
+@fa-font-path: "fonts";
+
 body {
   font-family: 'DINNextLTPro-Condensed', Arial, sans-serif;
 }
 
-.map-wrapper {
-  height: 100%;
-}
 
 app-map {
   -webkit-user-select: none !important; /* disable selection/Copy of UIWebView */
@@ -95,19 +91,4 @@ app-map {
   .ngeo-tooltip-static:before {
     border-top-color: #ffcc33;
   }
-}
-
-.hidden-2d {
-  display: none;
-}
-body.enabled-3d {
-  .hidden-3d {
-    display: none !important;
-  }
-  .hidden-2d {
-    display: inherit;
-  }
-}
-.olcs-hideoverlay .ol-overlay-container {
-  visibility:hidden;
 }
