--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/geoportailv3.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/geoportailv3.less
@@ -3,9 +3,11 @@
 @import "../../../node_modules/bootstrap/less/bootstrap.less";
 @import "../../../node_modules/font-awesome/less/font-awesome.less";
 
+@import "controls3d.less";
 @import "variables.less";
 @import "layout.less";
 @import "sidebar.less";
+@import "offline.less";
 @import "navbars.less";
 @import "icons.less";
 @import "catalog.less";
@@ -17,6 +19,7 @@
 @import "search.less";
 @import "mymaps.less";
 @import "featurepopup.less";
+@import "routing.less";
 
 
 @font-face {
@@ -27,12 +30,13 @@
        url('../webfonts/28867F_0_0.ttf') format('truetype');
 }
 
-@fa-font-path: "fonts";
-
 body {
   font-family: 'DINNextLTPro-Condensed', Arial, sans-serif;
 }
 
+.map-wrapper {
+  height: 100%;
+}
 
 app-map {
   -webkit-user-select: none !important; /* disable selection/Copy of UIWebView */
@@ -91,4 +95,19 @@ app-map {
   .ngeo-tooltip-static:before {
     border-top-color: #ffcc33;
   }
+}
+
+.hidden-2d {
+  display: none;
+}
+body.enabled-3d {
+  .hidden-3d {
+    display: none !important;
+  }
+  .hidden-2d {
+    display: inherit;
+  }
+}
+.olcs-hideoverlay .ol-overlay-container {
+  visibility:hidden;
 }
