default theme is now transport

--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/theme.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/theme.less
@@ -421,7 +421,7 @@ header.navbar-default {
 .theme(Occupation_du_sol,  #8d6e63, #bd9b8f, #5e4238, e90f, "Geoportail-Grande-Region");
 .theme(Eau, #03a2ac, #45cdd6, #078f98, e016, "geoportail-icons");
 .theme(eau, #03a2ac, #45cdd6, #078f98, e016, "geoportail-icons");
-.theme(main, #2980b9, #97bbd3, #1f5d87, e02d, "geoportail-icons");
+.theme(main, #2980b9, #97bbd3, #1f5d87, e02d, "Geoportail-Grande-Region");
 .theme(atlas_demographique, #f4b72b, #f3d89b, #b3851d, e900,"statec-icons");
 .theme(at, #f4511e, #ff844c, #b91400, e902, "Geoportail-Grande-Region");
 .theme(intranet-at, #9e9ac8, #cbc9e2, #756bb1, e018, "geoportail-icons");
