added themes for gisgr

--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/theme.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/theme.less
@@ -421,6 +421,21 @@ header.navbar-default {
 .theme(Occupation_du_sol,  #8d6e63, #bd9b8f, #5e4238, e90f, "Geoportail-Grande-Region");
 .theme(Eau, #03a2ac, #45cdd6, #078f98, e016, "geoportail-icons");
 .theme(eau, #03a2ac, #45cdd6, #078f98, e016, "geoportail-icons");
+
+.theme(securite_et_prevention, #ef6c00, #ff9d3f, #b53d00, e90b, "Geoportail-Grande-Region");
+.theme(enseignement_superieur, #9c27b0, #d05ce3, #6a0080, e905, "Geoportail-Grande-Region");
+.theme(energie, #558b2f, #85bb5c, #255d00, e906, "Geoportail-Grande-Region");
+.theme(administration, #1976d2, #63a4ff, #004ba0, e900, "Geoportail-Grande-Region");
+.theme(agriculture,  #f39c11, #ffc363, #9c6101, e901, "Geoportail-Grande-Region");
+.theme(amenagement, #f4511e, #ff844c, #b91400, e902, "Geoportail-Grande-Region");
+.theme(marche_du_travail, #0097a7,#56c8d8 ,#006978 , e908, "Geoportail-Grande-Region");
+.theme(culture_et_tourisme, #e84c3d, #e88c83, #a50f15, e90c, "Geoportail-Grande-Region");
+.theme(environnement,  #879d31, #bacd81, #627529, e909, "Geoportail-Grande-Region");
+.theme(occupation_des_sols,  #8d6e63, #bd9b8f, #5e4238, e90f, "Geoportail-Grande-Region");
+.theme(transport,  #1e88e5,#6ab7ff,#005cb2, e90d, "Geoportail-Grande-Region");
+.theme(demographie, #f4b72b, #f3d89b, #b3851d, e903, "Geoportail-Grande-Region");
+.theme(formation, #3f51b5, #757de8, #002984, e907, "Geoportail-Grande-Region");
+
 .theme(main, #2980b9, #97bbd3, #1f5d87, e02d, "Geoportail-Grande-Region");
 .theme(atlas_demographique, #f4b72b, #f3d89b, #b3851d, e900,"statec-icons");
 .theme(at, #f4511e, #ff844c, #b91400, e902, "Geoportail-Grande-Region");
