dedicated icons for gisgr

--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/layout.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/layout.less
@@ -165,7 +165,7 @@ app-map > div {
     text-align: center;
     text-indent: 0;
     border: 1px solid #8394a0;
-    font-family: "geoportail-icons" !important;
+    font-family: "gisgr-icons", "geoportail-icons" !important;
     margin: -1px;
   }
   &.infobar {
@@ -403,7 +403,7 @@ div.ol-zoom-extent > button {
   margin: 0px;
 }
 .navigation-account .tab:after {
-    font-family: "geoportail-icons";
+    font-family: "gisgr-icons", "geoportail-icons";
     font-size:28px;
     line-height:41px;
     color:#fff;
@@ -585,7 +585,7 @@ div.ol-zoom-extent > button {
   }
   a:after {
     bottom: 0px;
-    font-family: "geoportail-icons" !important;
+    font-family: "gisgr-icons", "geoportail-icons" !important;
     font-size: 2.5em;
     left: 10px;
     position: absolute;
