--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/icons.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/icons.less
@@ -60,7 +60,7 @@ button.icon,
 .infobar-button,
 li.icon > a {
   &:after {
-    font-family: "gisgr-icons", "geoportail-icons" !important;
+    font-family: "Geoportail-Grande-Region", "geoportail-icons" !important;
   }
 }
 .theme-icon {
@@ -147,11 +147,11 @@ button.icon.search:after,
 }
 .icon.active > a:after {
   content: '\e02c';
-  font-family: 'gisgr-icons', 'geoportail-icons' !important;
+  font-family: 'Geoportail-Grande-Region', 'geoportail-icons' !important;
 }
 .icon.routing.active > a:after {
   content: '\e02c';
-  font-family: 'gisgr-icons', 'geoportail-icons' !important;
+  font-family: 'Geoportail-Grande-Region', 'geoportail-icons' !important;
   font-size: 2em!important;
 }
 
