--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/layout.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/layout.less
@@ -257,12 +257,13 @@ app-map > div {
   bottom: 1px;
   left: initial;
   position: absolute;
+  display: block;
   right: 0px;
 }
 
 .ol-overviewmap {
   left: initial;
-  bottom: 204px;
+  bottom: 104px;
   padding: 0;
   right: 8px;
   border: 1px solid #8394a0;
