make the overviewmap appear

--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/layout.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/layout.less
@@ -77,7 +77,7 @@ app-map > div {
 }
 
 .ol-collapsed {
-    display: none
+    display: block
 }
 
 .close-panel {
@@ -257,7 +257,6 @@ app-map > div {
   bottom: 1px;
   left: initial;
   position: absolute;
-  display: block;
   right: 0px;
 }
 
