--- a/config/print/print-apps/geoportailv3/config.yaml.tmpl
+++ b/config/print/print-apps/geoportailv3/config.yaml.tmpl
@@ -206,7 +206,8 @@ templates:
     processors: *processors
   thumbnail: !template
     reportTemplate: thumbnail.jrxml
-    attributes: &attributes
+    attributes:
+      <<: *attributes
       map: !map
         maxDpi: 400
         dpiSuggestions: [72, 91, 128, 254, 300, 400]
