--- a/geoportal/geoportailv3_geoportal/static-ngeo/less/theme.less
+++ b/geoportal/geoportailv3_geoportal/static-ngeo/less/theme.less
@@ -435,6 +435,7 @@ header.navbar-default {
 .theme(transport,  #1e88e5,#6ab7ff,#005cb2, e90d, "Geoportail-Grande-Region");
 .theme(demographie, #f4b72b, #f3d89b, #b3851d, e903, "Geoportail-Grande-Region");
 .theme(formation, #3f51b5, #757de8, #002984, e907, "Geoportail-Grande-Region");
+.theme(sante, #b0271a, #e95b43, #790000, e90a, "Geoportail-Grande-Region");
 
 .theme(main, #2980b9, #97bbd3, #1f5d87, e02d, "Geoportail-Grande-Region");
 .theme(atlas_demographique, #f4b72b, #f3d89b, #b3851d, e900,"statec-icons");
